--- a/Report/architecture.tex
+++ b/Report/architecture.tex
@@ -8,7 +8,7 @@ To fulfill the constraints we can:\\
 \end{itemize}
 Suppose we want to realize a filter of order N.
 \subsection{Direct form}
-This structure requires N memory locations for storing previous inputs and in terms of complexity it does N+1 multiplications and  N additions.  For building this structure we simply use the definition: $$ y[n]=\sum_{i=0}^{N}c{_{i}}\cdot x[n-i]$$
+This structure requires N memory locations for storing previous inputs and in terms of complexity it does N+1 multiplications and  N additions.  For building this structure we simply use the definition \ref{eq:general}
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.45]{images/direct.jpeg}    
