--- a/Report/testbench.tex
+++ b/Report/testbench.tex
@@ -6,6 +6,8 @@ To stress out the size limits computed in section \ref{sec:sizing} the filter ha
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\linewidth]{./images/simul32768.PNG}
-  \caption{We can see how at regime the network output corresponds to the value returned by matlab}
+  \caption{Testbench of the filter with -32768 as costant input}
   \label{fig:32768}
 \end{figure}
+The network at regime settles to 1073938432 that corresponds to the value returned by Matlab.
+\subsection{Cut-off frequency}
