--- a/Report/synthesis.tex
+++ b/Report/synthesis.tex
@@ -10,38 +10,45 @@ For the hardware implementation of the project Vivado software by Xilinx was use
 \end{figure}
 \subsection{Synthesis}
 A clock period of 10 ns was set. The synthesis was carried without any kind of warnings displayed.\\
-\textbf{Timing report} Timing report is fine and states that all constraints are met:
+
+\subsubsection{Timing report} % (fold)
+\label{ssub:timing_report}
+Timing report is fine and states that all constraints are met:
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\linewidth]{./images/timing.PNG}
   \caption{Timing summary from vivado}
   \label{fig:timing}
 \end{figure}
-\textbf{Power report} 
+
+
+\subsubsection{Power report} % (fold)
+\label{ssub:power_report}
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\linewidth]{./images/power.PNG}
   \caption{Power summary from vivado}
   \label{fig:power}
 \end{figure}
-\textbf{Utilization report}
 
+\subsubsection{Utilization report} % (fold)
+\label{ssub:utilization_report}
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.9\linewidth]{./images/utilization.PNG}
   \caption{Utilization summary from vivado}
   \label{fig:utilization}
 \end{figure}
-\ref{fig:utilization} shows how the most widely used resource is the I/O this derives from the fact that the circuit has 16 bit inputs and a 32 bit output.
+Figure \ref{fig:utilization} shows how the most widely used resource is the I/O this derives from the fact that the circuit has 16 bit inputs and a 32 bit output.
 \subsection{Critical path} % (fold)
 \label{sub:critical_path}
 Vivado shows how the critical path includes the sum and multiplication operation from the output of a registry till the input to the next registry.
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.9\linewidth]{./images/critical}
-  \caption{Critical path highlighted by vivado}
-  \label{fig:critical}
-\end{figure}
+ \begin{figure}[H]
+   \centering
+   \includegraphics[width=0.9\linewidth]{./images/critical}
+   \caption{Critical path highlighted by vivado}
+   \label{fig:critical}
+ \end{figure}
 \subsection{Maximum operating frequency} % (fold)
 \label{sub:maximum_operating_frequency}
 From the timing report a positive Worst Negative Slack suggests that the circuit is not operating at the maximum frequency possible.
