--- a/Report/main.tex
+++ b/Report/main.tex
@@ -35,9 +35,10 @@
 \include{cover}
 \tableofcontents{}
 \clearpage
-\include{introduction}
-\include{architecture}
-\include{implemented}
-\include{testbench}
-\include{synthesis}
+\input{introduction}
+\input{architecture}
+\input{implemented}
+\input{testbench}
+\input{synthesis}
+\input{conclusion}
 \end{document}
