--- a/Report/conclusion.tex
+++ b/Report/conclusion.tex
@@ -1,2 +1,2 @@
 \section{Conclusions}
-The work can be considered concluded, since the filter is compliant to its specifications. To reduce the number of multiplications the symmetric version of the filter could be developed since symmetric coefficients are given. The filter could be improved by increasing the number of coefficients hence the number of steps obtaining a behavior more similar to an ideal filter. This would increase the utilization of the board and the size output, but if more precision is needed it is a good tradeoff.
+The work can be considered concluded, since the filter is compliant to its specifications. To reduce the number of multiplications the symmetric version of the filter could be developed since symmetric coefficients are given. The filter precision could be improved by increasing the number of coefficients hence the number of steps obtaining a behavior more similar to an ideal filter. 
