--- a/Report/implemented.tex
+++ b/Report/implemented.tex
@@ -10,4 +10,5 @@ To realize the transposed architecture the result had to be sized:
 	\label{eq:size}
 	\left \lceil log_2(2^{b-1})*\sum_{i=0}^{N} coeff_i\right \rceil	+1
 \end{equation}
-Equation \ref{eq:size} returned a value for the output dimension of 32 bits.
+Equation \ref{eq:size} returned a value for the output size of 32 bits.
+\clearpage
