--- a/Report/testbench.tex
+++ b/Report/testbench.tex
@@ -9,7 +9,7 @@ To stress out the size limits computed in section \ref{sec:sizing} the filter wa
   \caption{Test-bench of the filter with -32768 as constant input}
   \label{fig:32768}
 \end{figure}
-The network at regime settles to 1073938432 that corresponds to the value returned by Matlab.
+The network at regime settles to -1073938432 that corresponds to the value returned by Matlab.
 \subsection{Prove of correctness}
 In order to check if the filter performed the convolution expressed in equation \ref{eq:general} a random input was tested and compared against the output of Matlab performing the same operation. The results once the network is at regime are matched by the output produced by Matlab convolution.
 \subsection{Filtering}
